HOTFIX : scrollable product list
In this commit, the product list has been made scrollable.

--- a/androidApp/src/main/res/layout/fragment_product.xml
+++ b/androidApp/src/main/res/layout/fragment_product.xml
@@ -118,10 +118,12 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/product_page_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:scrollbars="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintTop_toBottomOf="@+id/sort_by_location" />
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -132,14 +134,14 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:src="@drawable/ic_add"
+        android:contentDescription="@string/add_product_description"
         android:layout_marginRight="@dimen/large_margin"
         android:layout_marginEnd="@dimen/large_margin"
         android:layout_marginBottom="@dimen/large_margin"
         app:backgroundTint="@color/light_green"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:tint="@color/white"
-        />
+        app:tint="@color/white" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
