--- a/androidApp/src/main/res/layout/activity_sign_up.xml
+++ b/androidApp/src/main/res/layout/activity_sign_up.xml
@@ -14,7 +14,7 @@
         android:text="@string/main_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="54dp"
+        android:layout_marginLeft="56dp"
         android:layout_marginTop="100dp"
         android:layout_marginStart="54dp" />
 
@@ -66,13 +66,15 @@
     <EditText
         android:id="@+id/password"
         android:layout_width="350dp"
-        android:layout_height="wrap_content"
+        android:layout_height="54dp"
         android:background="@drawable/rounded_edittext"
         android:inputType="textPassword"
         android:maxLength="30"
         android:padding="15dp"
         android:textSize="18sp"
         android:textStyle="bold"
+        app:passwordToggleEnabled="true"
+        app:passwordToggleDrawable="@drawable/ic_eye"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginLeft="30dp"
@@ -85,7 +87,7 @@
     <EditText
         android:id="@+id/confirm_password"
         android:layout_width="350dp"
-        android:layout_height="wrap_content"
+        android:layout_height="56dp"
         android:autofillHints="aliment name"
         android:background="@drawable/rounded_edittext"
         android:drawableStart="@drawable/ic_password_icon"
@@ -95,12 +97,14 @@
         android:padding="15dp"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="445dp"
         android:drawablePadding="15dp"
-        android:layout_marginStart="30dp" />
+        android:layout_marginStart="30dp"
+        app:passwordToggleEnabled="true"
+        app:passwordToggleDrawable="@drawable/ic_eye"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
         android:id="@+id/subtitle_confirm_password"
