--- a/androidApp/src/main/res/layout/fragment_settings.xml
+++ b/androidApp/src/main/res/layout/fragment_settings.xml
@@ -22,7 +22,7 @@
         app:layout_constraintVertical_bias="0.033" />
 
     <TextView
-        android:id="@+id/username"
+        android:id="@+id/usernameSettings"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/username"
