ADD : ADD feature updata password and hash in Database
* Verification of the quality of the added password.
* Verification of the two similar passwords
* The hash of the password
* Change in the DB with the api

--- a/androidApp/src/main/res/values/colors.xml
+++ b/androidApp/src/main/res/values/colors.xml
@@ -22,6 +22,7 @@
     <color name="black">#000000</color>
     <color name="dark_blue">#5376c1</color>
     <color name="dark_grey_v2">#83919c</color>
+    <color name="dark_grey_v3">#7E8081</color>
 
 
 </resources>
