--- a/androidApp/src/main/res/layout/fragment_login.xml
+++ b/androidApp/src/main/res/layout/fragment_login.xml
@@ -5,36 +5,33 @@
     android:gravity="center"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    
+
     <LinearLayout
         android:layout_width="300dp"
         android:padding="10dp"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+
         <TextView
             android:id="@+id/text_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="30dp"
+            android:text="Bonjour"
             android:textColor="@color/darkGreen"
-            android:textStyle="bold"
-            android:text="Bonjour" />
-
-
+            android:textSize="30dp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/textViewLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="18dp"
-            android:textColor="@color/darkGreen"
-            android:textStyle="bold"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="60dp"
-            android:text="Connectez-vous à votre compte" />
-
-
+            android:text="Connectez-vous à votre compte"
+            android:textColor="@color/darkGreen"
+            android:textSize="18dp"
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/editTextUser"
@@ -54,11 +51,24 @@
             android:drawableStart="@drawable/ic_user_icon"
             android:drawablePadding="15dp"/>
 
+
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:focusable="true"
+            android:gravity="left"
+            android:orientation="horizontal" >
+
         <EditText
             android:id="@+id/editTextPassword"
-            android:layout_width="match_parent"
+            android:layout_width="236dp"
             android:layout_height="wrap_content"
             android:background="@drawable/rounded_edittext"
+            android:drawableStart="@drawable/ic_password_icon"
+            android:drawableLeft="@drawable/ic_password_icon"
+            android:drawablePadding="15dp"
             android:inputType="textPassword"
             android:maxLength="30"
             android:padding="15dp"
@@ -67,9 +77,16 @@
             tools:ignore="MissingConstraints"
             tools:layout_editor_absoluteX="30dp"
             tools:layout_editor_absoluteY="235dp"
-            android:drawableLeft="@drawable/ic_password_icon"
-            android:drawableStart="@drawable/ic_password_icon"
-            android:drawablePadding="15dp"/>
+            android:layout_weight="1" />
+
+        <CheckBox
+            android:id="@+id/showPassword"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="false"
+            />
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/forgotPassword"
