ADD : Checking of the strength of the password of the user [SignUp Page]
The user has now the enter at least one lowercase, uppercase and a digit.
If not, the application returns an error.
No POST request is made until the format is not good enough.

--- a/androidApp/src/main/res/values/styles.xml
+++ b/androidApp/src/main/res/values/styles.xml
@@ -72,7 +72,7 @@
 
     <!-- Main title of the page sign up -->
     <style name="main_title_sign_up_page">
-        <item name="android:textSize">38sp</item>
+        <item name="android:textSize">30dp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/darkGreen</item>
 
