--- a/androidApp/src/main/res/layout/activity_send_email_reset_password.xml
+++ b/androidApp/src/main/res/layout/activity_send_email_reset_password.xml
@@ -41,12 +41,10 @@
         android:layout_marginStart="30dp"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="155dp"
-        android:layout_marginBottom="286dp"
         android:text="Mettre à jours votre mot de passe ."
         android:textColor="@color/darkGreen"
         android:textSize="20dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/button_check_code"
         app:layout_constraintStart_toStartOf="@+id/imageView_image_maik"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -95,19 +93,7 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/button_resend_code"
-        app:layout_constraintTop_toBottomOf="@+id/button_check_code" />
-
-    <Button
-        android:id="@+id/button_check_code"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="37dp"
-        android:text="Vérifier le code"
-        app:layout_constraintBottom_toTopOf="@+id/button_continued"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView_update_passsword" />
+        app:layout_constraintStart_toEndOf="@+id/button_resend_code" />
 
     <EditText
         android:id="@+id/editTextCode"
