ADD : products from raspberry
Products added from the raspberry barcode scanner are now listed in the app

--- a/androidApp/src/main/res/layout/activity_forms_add_aliments.xml
+++ b/androidApp/src/main/res/layout/activity_forms_add_aliments.xml
@@ -151,8 +151,7 @@
             android:layout_marginTop="@dimen/form_margin_top"
             android:autofillHints="aliment quantite"
             android:background="@drawable/rounded_edittext"
-            android:inputType="number"
-            android:maxLength="4"
+            android:inputType="text"
             android:padding="15dp"
             android:textSize="18sp"
             android:textStyle="bold"
