ADD : Terms pop-up
A checkbox for the agreement terms client.

--- a/androidApp/src/main/res/layout/fragment_login.xml
+++ b/androidApp/src/main/res/layout/fragment_login.xml
@@ -98,15 +98,40 @@
             android:layout_height="wrap_content"
             android:layout_gravity="right"
 
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="10dp"
             android:text="Mot de passe oublié ?" />
 
         <CheckBox
             android:id="@+id/rememberMe"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:text="Se souvenir de moi" />
+
+        <CheckBox
+            android:id="@+id/Terms_checkbox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+
+            android:text="J'accepte avoir lu et accepter les"
+            android:layout_weight="1"/>
+
+        <TextView
+            android:id="@+id/terms_link"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="40dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginBottom="20dp"
+            android:clickable="true"
+            android:radius="30dp"
+            android:linksClickable="true"
+            style="@style/terms_link_style"
+            android:text="termes d'utilisation"
+            android:focusable="true">
+
+        </TextView>
 
         <Button
             android:id="@+id/buttonLogin"
@@ -115,7 +140,7 @@
             android:background="@drawable/rounded_button"
             android:textColor="@color/darkGreen"
             android:radius="30dp"
-            android:layout_marginBottom="50dp"
+            android:layout_marginBottom="40dp"
             android:text="Connexion" />
 
         <TextView
