ADD : Basic Notification
I added a basic notification when cliking on a button

--- a/androidApp/src/main/res/layout/fragment_home.xml
+++ b/androidApp/src/main/res/layout/fragment_home.xml
@@ -19,6 +19,20 @@
         android:textAllCaps="false"
         />
 
+    <Button
+        android:id="@+id/sendNotif"
+        android:layout_width="350dp"
+        android:layout_height="65dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:text="@string/send_notif"
+        android:textSize="20sp"
+        android:textColor="@color/white"
+        android:background="@drawable/home_page_button"
+        android:textAllCaps="false"
+        />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/vertical_recycler_view"
         android:layout_width="match_parent"
