--- a/androidApp/src/main/res/values/dimens.xml
+++ b/androidApp/src/main/res/values/dimens.xml
@@ -16,7 +16,7 @@
     <!-- Product pop-up -->
     <dimen name="icon_dimensions">40dp</dimen>
     <dimen name="product_characteristics">160dp</dimen>
-
+    <dimen name="ingredients">310dp</dimen>
     <dimen name="popup_button_height">35dp</dimen>
     <dimen name="popup_button_width">110dp</dimen>
     <dimen name="button_side_margin">20dp</dimen>
