--- a/androidApp/src/main/res/layout/activity_how_to_connect.xml
+++ b/androidApp/src/main/res/layout/activity_how_to_connect.xml
@@ -7,12 +7,109 @@
     tools:context=".HowToConnect">
 
     <TextView
+        style="@style/main_title_how_to_connect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TODO"
+        android:layout_marginStart="36dp"
+        android:layout_marginLeft="36dp"
+        android:layout_marginTop="80dp"
+        android:text="@string/main_title_how_to_connect"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        style="@style/normal_text"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="36dp"
+        android:layout_marginLeft="36dp"
+        android:layout_marginTop="136dp"
+        android:text="@string/sub_title_how_to_connect"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/ivQRcode"
+        android:layout_width="230dp"
+        android:layout_height="230dp"
+        android:layout_marginTop="468dp"
+        android:src="@mipmap/ic_launcher"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        style="@style/normal_text"
+        android:layout_width="340dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="36dp"
+        android:layout_marginLeft="36dp"
+        android:layout_marginTop="308dp"
+        android:text="@string/first_subtitle_how_to_connect"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView3"
+        style="@style/it_must"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="36dp"
+        android:layout_marginLeft="36dp"
+        android:layout_marginTop="244dp"
+        android:text="@string/it_must"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:layout_width="78dp"
+        android:layout_height="142dp"
+        android:src="@drawable/smartphone"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.951"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.157"
+        tools:ignore="MissingConstraints" />
+
+    <TextView
+        style="@style/normal_text"
+        android:layout_width="340dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="36dp"
+        android:layout_marginLeft="36dp"
+        android:layout_marginTop="392dp"
+        android:text="@string/it_must_step"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button_return_list_product"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:background="@color/beige"
+        android:gravity="center"
+        android:padding="@dimen/default_padding"
+        android:textColor="@color/light_green"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/return_icon"
+        android:layout_width="@dimen/icon_dimensions"
+        android:layout_height="@dimen/icon_dimensions"
+        android:layout_marginStart="@dimen/label_side_margin"
+        android:layout_marginLeft="@dimen/label_side_margin"
+        android:contentDescription="@string/ic_close_description"
+        android:src="@drawable/ic_arrow_left"
+        android:textColor="@color/light_green"
+        app:layout_constraintBottom_toBottomOf="@+id/button_return_list_product"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/button_return_list_product" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
