ADD + EDIT : user can now add a new a new scanner + accessibility changes
With this commit, the user is able to add a new scanner to it's account, for more information please consult the following link : https://trello.com/c/SL8n6y0f/15-us-08-jumelage-entre-le-raspberry-et-lapplication

--- a/androidApp/src/main/res/layout/fragment_home.xml
+++ b/androidApp/src/main/res/layout/fragment_home.xml
@@ -14,7 +14,7 @@
         android:layout_marginBottom="20dp"
         android:text="@string/home_first_button"
         android:textSize="20sp"
-        android:textColor="@color/white"
+        android:textColor="@color/really_dark_green"
         android:background="@drawable/home_page_button"
         android:textAllCaps="false"
         />
@@ -28,7 +28,7 @@
         android:layout_marginBottom="20dp"
         android:text="@string/send_notif"
         android:textSize="20sp"
-        android:textColor="@color/white"
+        android:textColor="@color/really_dark_green"
         android:background="@drawable/home_page_button"
         android:textAllCaps="false"
         />
