--- a/androidApp/src/main/res/layout/fragment_settings.xml
+++ b/androidApp/src/main/res/layout/fragment_settings.xml
@@ -48,6 +48,7 @@
 
     <ImageView
         android:id="@+id/ivQRcode"
+        android:contentDescription="@string/content_description_qr"
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:layout_marginTop="204dp"
@@ -59,17 +60,30 @@
 
     <Button
         android:id="@+id/disconnect"
+        android:layout_marginTop="@dimen/settings_button_margin_top"
         android:layout_width="226dp"
         android:layout_height="48dp"
-        android:layout_marginTop="40dp"
         android:background="@drawable/sign_up_inscription_button"
-        android:text="Se déconnecter"
+        android:text="@string/sign_out"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.567"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ivQRcode" />
+
+    <Button
+        android:id="@+id/new_raspberry"
+        android:layout_marginTop="@dimen/settings_button_margin_top"
+        android:layout_width="226dp"
+        android:layout_height="48dp"
+        android:background="@drawable/sign_up_inscription_button"
+        android:text="@string/new_raspberry"
+        android:textColor="@color/white"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.567"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/disconnect"
         app:layout_constraintVertical_bias="0.825" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
