--- a/androidApp/src/main/res/values/dimens.xml
+++ b/androidApp/src/main/res/values/dimens.xml
@@ -28,4 +28,7 @@
     <dimen name="label_margin_bottom">6dp</dimen>
     <dimen name="label_side_margin">15dp</dimen>
     <dimen name="precisions_side_margin">10dp</dimen>
+
+    <!-- settings page -->
+    <dimen name="settings_button_margin_top">15dp</dimen>
 </resources>
