--- a/androidApp/src/main/res/values/styles.xml
+++ b/androidApp/src/main/res/values/styles.xml
@@ -41,7 +41,7 @@
 
     <!-- product list font -->
     <style name="product_list">
-        <item name="android:textColor">#373636</item>
+        <item name="android:textColor">@color/black</item>
         <item name="android:textSize">12sp</item>
     </style>
 
@@ -60,7 +60,7 @@
 
     <!-- For the subtitles of each card view -> degree and temperature -->
     <style name="Subtitles">
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">16sp</item>
     </style>
 
     <!-- Form Add Page  -->
