--- a/androidApp/src/main/res/layout/fragment_settings.xml
+++ b/androidApp/src/main/res/layout/fragment_settings.xml
@@ -59,23 +59,10 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/disconnect"
-        android:layout_marginTop="@dimen/settings_button_margin_top"
-        android:layout_width="226dp"
-        android:layout_height="48dp"
-        android:background="@drawable/sign_up_inscription_button"
-        android:text="@string/sign_out"
-        android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.567"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ivQRcode" />
-
-    <Button
         android:id="@+id/new_raspberry"
-        android:layout_marginTop="@dimen/settings_button_margin_top"
         android:layout_width="226dp"
         android:layout_height="48dp"
+        android:layout_marginTop="@dimen/settings_button_margin_top"
         android:background="@drawable/sign_up_inscription_button"
         android:text="@string/new_raspberry"
         android:textColor="@color/white"
@@ -83,7 +70,32 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.567"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/disconnect"
-        app:layout_constraintVertical_bias="0.825" />
+        app:layout_constraintTop_toBottomOf="@+id/ivQRcode" />
+
+    <Button
+        android:id="@+id/new_location"
+        android:layout_width="226dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="@dimen/settings_button_margin_top"
+        android:background="@drawable/sign_up_inscription_button"
+        android:text="@string/new_location"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.567"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/new_raspberry" />
+
+    <Button
+        android:id="@+id/disconnect"
+        android:layout_width="226dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="@dimen/settings_button_margin_top"
+        android:background="@drawable/sign_up_inscription_button"
+        android:text="@string/sign_out"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.567"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/new_location" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
