ADD : link raspberry to user
A user is now able to add a raspberry to its account thanks to the qr-code. For more information, please consult : https://trello.com/c/SL8n6y0f/15-us-08-jumelage-entre-le-raspberry-et-lapplication

--- a/androidApp/src/main/res/values/dimens.xml
+++ b/androidApp/src/main/res/values/dimens.xml
@@ -31,4 +31,12 @@
 
     <!-- settings page -->
     <dimen name="settings_button_margin_top">15dp</dimen>
+
+    <!-- location pop-up -->
+    <dimen name="location_margin_left">5dp</dimen>
+    <dimen name="location_margin_top">10dp</dimen>
+    <dimen name="location_margin_top_light">4dp</dimen>
+    <dimen name="location_button_margin">20dp</dimen>
+
+    <!-- raspberry pop-up -->
 </resources>
