--- a/androidApp/src/main/res/layout/raspberry_popup.xml
+++ b/androidApp/src/main/res/layout/raspberry_popup.xml
@@ -2,18 +2,31 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/product_popup"
     android:layout_width="320dp"
-    android:layout_height="400dp"
+    android:layout_height="350dp"
     android:padding="@dimen/default_padding">
+
+    <ImageView
+        android:id="@+id/close_popup"
+        android:layout_width="@dimen/icon_dimensions"
+        android:layout_height="@dimen/icon_dimensions"
+        android:contentDescription="@string/ic_close_description"
+        android:src="@drawable/ic_close"
+        app:layout_constraintBottom_toBottomOf="@+id/raspberry_popup_title"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/raspberry_popup_title" />
 
     <TextView
         android:id="@+id/raspberry_popup_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:textColor="@color/dark_green"
+        android:textStyle="bold"
+        android:textSize="18sp"
         android:text="@string/raspberry_popup_title"
+        android:layout_marginTop="@dimen/location_margin_top"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,6 +36,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:textColor="@color/black"
+        android:layout_marginTop="@dimen/location_margin_top"
         android:text="@string/raspberry_popup_description"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,9 +47,13 @@
         android:id="@+id/raspberry_popup_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:layout_marginTop="@dimen/location_margin_top"
+        android:layout_marginLeft="@dimen/location_margin_left"
         android:text="@string/raspberry_popup_id"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/raspberry_popup_description" />
+        app:layout_constraintTop_toBottomOf="@+id/raspberry_popup_description"
+        android:layout_marginStart="@dimen/location_margin_left" />
 
     <TextView
         android:id="@+id/raspberry_popup_id_default"
@@ -42,6 +61,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/raspberry_popup_id_default"
+        android:layout_marginTop="@dimen/location_margin_top_light"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/raspberry_popup_id" />
@@ -50,18 +70,23 @@
         android:id="@+id/raspberry_popup_location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:layout_marginTop="@dimen/location_margin_top"
+        android:layout_marginLeft="@dimen/location_margin_left"
         android:text="@string/raspberry_popup_location"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/raspberry_popup_id_default" />
+        app:layout_constraintTop_toBottomOf="@+id/raspberry_popup_id_default"
+        android:layout_marginStart="@dimen/location_margin_left" />
 
     <Spinner
         android:id="@+id/raspberry_popup_location_edit"
         style="@style/SpinnerTheme"
         android:layout_width="250dp"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:padding="15dp"
         android:spinnerMode="dialog"
+        android:layout_marginTop="@dimen/location_margin_top_light"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/raspberry_popup_location" />
@@ -70,36 +95,55 @@
         android:id="@+id/raspberry_popup_new_location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/location_margin_top"
+        android:layout_marginLeft="@dimen/location_margin_left"
+        android:textColor="@color/black"
         android:text="@string/raspberry_popup_new_location"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/raspberry_popup_location_edit" />
+        app:layout_constraintTop_toBottomOf="@+id/raspberry_popup_location_edit"
+        android:layout_marginStart="@dimen/location_margin_left" />
 
     <EditText
         android:id="@+id/raspberry_popup_new_location_edit"
+        android:hint="@string/raspberry_popup_hint"
         android:layout_width="250dp"
         android:layout_height="40dp"
+        android:autofillHints="New location"
+        android:gravity="center"
+        android:layout_marginTop="@dimen/location_margin_top_light"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/raspberry_popup_new_location" />
+        app:layout_constraintTop_toBottomOf="@+id/raspberry_popup_new_location"
+        android:inputType="text"
+        app:backgroundTint="@color/dark_green" />
 
     <Button
         android:id="@+id/raspberry_popup_save"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/popup_button_width"
+        android:layout_height="@dimen/popup_button_height"
         android:text="@string/raspberry_popup_save"
         android:textAllCaps="false"
+        android:background="@color/light_grey"
         android:textColor="@color/black"
+        android:layout_marginBottom="@dimen/location_margin_top"
+        android:layout_marginRight="@dimen/location_button_margin"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="@dimen/location_button_margin" />
 
     <Button
         android:id="@+id/raspberry_popup_discard"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/popup_button_width"
+        android:layout_height="@dimen/popup_button_height"
         android:text="@string/raspberry_popup_discard"
         android:textAllCaps="false"
+        android:background="@color/delete_red"
+        android:textColor="@color/white"
+        android:layout_marginBottom="@dimen/location_margin_top"
+        android:layout_marginLeft="@dimen/location_button_margin"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="@dimen/location_button_margin" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
