--- a/androidApp/src/main/res/layout/activity_how_to_connect.xml
+++ b/androidApp/src/main/res/layout/activity_how_to_connect.xml
@@ -7,48 +7,74 @@
     tools:context=".HowToConnect">
 
     <TextView
+        android:id="@+id/textView4"
         style="@style/main_title_how_to_connect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginLeft="36dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="15dp"
         android:text="@string/main_title_how_to_connect"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/button_return_list_product" />
 
     <TextView
+        android:id="@+id/textView6"
         style="@style/normal_text"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="23dp"
         android:layout_marginStart="36dp"
         android:layout_marginLeft="36dp"
-        android:layout_marginTop="136dp"
         android:text="@string/sub_title_how_to_connect"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <ImageView
         android:id="@+id/ivQRcode"
         android:layout_width="230dp"
         android:layout_height="230dp"
-        android:layout_marginTop="468dp"
         android:src="@mipmap/ic_launcher"
+        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/connect_third_step" />
 
     <TextView
+        android:id="@+id/connect_first_step"
         style="@style/normal_text"
         android:layout_width="340dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
         android:layout_marginLeft="36dp"
-        android:layout_marginTop="308dp"
+        android:layout_marginTop="10dp"
         android:text="@string/first_subtitle_how_to_connect"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+    <TextView
+        android:id="@+id/connect_second_step"
+        style="@style/normal_text"
+        android:layout_width="340dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="36dp"
+        android:layout_marginLeft="36dp"
+        android:layout_marginTop="10dp"
+        android:text="@string/second_subtitle_how_to_connect"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/connect_first_step" />
+
+    <TextView
+        android:id="@+id/connect_third_step"
+        style="@style/normal_text"
+        android:layout_width="340dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="36dp"
+        android:text="@string/third_subtitle_how_to_connect"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/connect_second_step" />
 
     <TextView
         android:id="@+id/textView3"
@@ -56,34 +82,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
+        android:layout_marginTop="34dp"
         android:layout_marginLeft="36dp"
-        android:layout_marginTop="244dp"
         android:text="@string/it_must"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <ImageView
         android:layout_width="78dp"
-        android:layout_height="142dp"
+        android:layout_height="100dp"
         android:src="@drawable/smartphone"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/textView6"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.951"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.157"
+        app:layout_constraintStart_toEndOf="@+id/textView6"
+        app:layout_constraintTop_toTopOf="@+id/textView6"
         tools:ignore="MissingConstraints" />
 
-    <TextView
-        style="@style/normal_text"
-        android:layout_width="340dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginLeft="36dp"
-        android:layout_marginTop="392dp"
-        android:text="@string/it_must_step"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button_return_list_product"
@@ -106,7 +120,8 @@
         android:layout_marginLeft="@dimen/label_side_margin"
         android:contentDescription="@string/ic_close_description"
         android:src="@drawable/ic_arrow_left"
-        android:textColor="@color/light_green"
+        android:textColor="@color/dark_green"
+        app:tint="@color/dark_green"
         app:layout_constraintBottom_toBottomOf="@+id/button_return_list_product"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/button_return_list_product" />
