--- a/androidApp/src/main/res/layout/activity_send_email_reset_password.xml
+++ b/androidApp/src/main/res/layout/activity_send_email_reset_password.xml
@@ -6,6 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".CheckCodeMail">
 
+    <Button
+        android:id="@+id/bouton_retour"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="25dp"
+        android:background="@color/beige"
+        android:drawableStart="@drawable/ic_arrow_left"
+        android:drawableLeft="@drawable/ic_arrow_left"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
     <ImageView
         android:id="@+id/imageView_image_maik"
