--- a/androidApp/src/main/res/layout/activity_update_password.xml
+++ b/androidApp/src/main/res/layout/activity_update_password.xml
@@ -18,7 +18,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView_email" />
+        app:layout_constraintTop_toBottomOf="@+id/checkBox_password_2" />
 
     <ImageView
         android:id="@+id/logo_mail"
@@ -34,18 +34,13 @@
     <Button
         android:id="@+id/bouton_retour"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="29dp"
-        android:layout_marginRight="29dp"
-        android:layout_marginBottom="19dp"
-        android:background="@color/white"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="25dp"
+        android:background="@color/beige"
         android:drawableStart="@drawable/ic_arrow_left"
         android:drawableLeft="@drawable/ic_arrow_left"
         app:layout_constraintBottom_toTopOf="@+id/logo_mail"
-        app:layout_constraintEnd_toEndOf="@+id/logo_mail"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -75,10 +70,10 @@
         android:layout_marginLeft="70dp"
         android:layout_marginEnd="70dp"
         android:layout_marginRight="70dp"
-        android:layout_marginBottom="7dp"
+        android:layout_marginBottom="28dp"
         android:text="Veuillez introduire un nouveau mot de passe"
         android:textColor="@color/dark_green"
-        app:layout_constraintBottom_toTopOf="@+id/new_mpd"
+        app:layout_constraintBottom_toTopOf="@+id/button_check_password1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/t1" />
@@ -89,10 +84,10 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="12dp"
         android:layout_marginRight="12dp"
-        android:layout_marginBottom="15dp"
+        android:layout_marginBottom="33dp"
         android:text="Confirmation du nouveau mot de passe"
         android:textColor="@color/dark_green"
-        app:layout_constraintBottom_toTopOf="@+id/confirm_new_mdp"
+        app:layout_constraintBottom_toTopOf="@+id/button_check_password2"
         app:layout_constraintEnd_toEndOf="@+id/confirm_new_mdp"
         app:layout_constraintTop_toBottomOf="@+id/checkBox_password_1" />
 
@@ -102,16 +97,17 @@
         android:layout_height="0dp"
         android:layout_marginStart="67dp"
         android:layout_marginLeft="67dp"
+        android:layout_marginTop="7dp"
         android:layout_marginEnd="67dp"
         android:layout_marginRight="67dp"
-        android:layout_marginBottom="1dp"
+        android:layout_marginBottom="3dp"
         android:background="@drawable/rounded_edittext"
         android:drawableStart="@drawable/ic_baseline_lock_24"
         android:drawableLeft="@drawable/ic_baseline_lock_24"
         android:ems="10"
         android:inputType="textPassword"
         android:maxLength="20"
-        app:layout_constraintBottom_toTopOf="@+id/checkBox_password_1"
+        app:layout_constraintBottom_toBottomOf="@+id/button_check_password1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/t2" />
@@ -120,88 +116,92 @@
     <EditText
         android:id="@+id/confirm_new_mdp"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="70dp"
-        android:layout_marginLeft="70dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginRight="5dp"
+        android:layout_height="51dp"
+        android:layout_marginStart="65dp"
+        android:layout_marginLeft="65dp"
+        android:layout_marginTop="34dp"
+        android:layout_marginEnd="65dp"
+        android:layout_marginRight="65dp"
+        android:layout_marginBottom="32dp"
         android:background="@drawable/rounded_edittext"
         android:drawableLeft="@drawable/ic_baseline_lock_24"
         android:ems="10"
         android:inputType="textPassword"
         android:maxLength="20"
-        app:layout_constraintBottom_toTopOf="@+id/checkBox_password_2"
-        app:layout_constraintEnd_toStartOf="@+id/button_check_password2"
+        app:layout_constraintBottom_toBottomOf="@+id/checkBox_password_2"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/t3" />
+        app:layout_constraintTop_toTopOf="@+id/t3" />
 
     <TextView
         android:id="@+id/textView_email"
         android:layout_width="193dp"
-        android:layout_height="0dp"
+        android:layout_height="56dp"
         android:layout_marginStart="75dp"
         android:layout_marginLeft="75dp"
-        android:layout_marginTop="103dp"
+        android:layout_marginTop="55dp"
         android:layout_marginEnd="78dp"
         android:layout_marginRight="78dp"
-        android:layout_marginBottom="502dp"
+        android:layout_marginBottom="52dp"
         android:text=""
         android:textColor="@color/darkGreen"
-        app:layout_constraintBottom_toTopOf="@+id/submit"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/t1"
+        app:layout_constraintEnd_toEndOf="@+id/bouton_retour"
         app:layout_constraintStart_toStartOf="@+id/t1"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/bouton_retour" />
 
     <CheckBox
         android:id="@+id/checkBox_password_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="70dp"
-        android:layout_marginLeft="70dp"
-        android:layout_marginEnd="133dp"
-        android:layout_marginRight="133dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginLeft="72dp"
+        android:layout_marginEnd="134dp"
+        android:layout_marginRight="134dp"
         android:layout_marginBottom="37dp"
         android:text="Voir mot de passe"
         app:layout_constraintBottom_toTopOf="@+id/t3"
         app:layout_constraintEnd_toStartOf="@+id/button_check_password1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/new_mpd" />
+        app:layout_constraintTop_toBottomOf="@+id/button_check_password1" />
 
     <CheckBox
         android:id="@+id/checkBox_password_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="70dp"
+        android:layout_marginLeft="70dp"
+        android:layout_marginEnd="135dp"
+        android:layout_marginRight="135dp"
         android:layout_marginBottom="110dp"
         android:text="Voir mot de passe"
         app:layout_constraintBottom_toTopOf="@+id/submit"
-        app:layout_constraintStart_toStartOf="@+id/confirm_new_mdp"
-        app:layout_constraintTop_toBottomOf="@+id/confirm_new_mdp" />
+        app:layout_constraintEnd_toStartOf="@+id/button_check_password2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_check_password2" />
 
     <Button
         android:id="@+id/button_check_password1"
-        android:layout_width="29dp"
-        android:layout_height="33dp"
-        android:layout_marginTop="342dp"
-        android:layout_marginEnd="28dp"
-        android:layout_marginRight="28dp"
-        android:layout_marginBottom="118dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginRight="30dp"
         android:background="@drawable/ic_baseline_check_24"
-        app:layout_constraintBottom_toTopOf="@+id/button_check_password2"
+        app:layout_constraintBottom_toTopOf="@+id/checkBox_password_1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/checkBox_password_1"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/t2" />
 
     <Button
         android:id="@+id/button_check_password2"
-        android:layout_width="32dp"
-        android:layout_height="36dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginEnd="28dp"
         android:layout_marginRight="28dp"
-        android:layout_marginBottom="217dp"
         android:background="@drawable/ic_baseline_check_24"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/checkBox_password_2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/confirm_new_mdp"
-        app:layout_constraintTop_toBottomOf="@+id/button_check_password1" />
+        app:layout_constraintStart_toEndOf="@+id/checkBox_password_2"
+        app:layout_constraintTop_toBottomOf="@+id/t3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
