ADD : sorting product list
With this commit, the user will now be able to sort the product list either by name, by locaiton or by the product's expiration date.
For more information, please consult the following link --> https://trello.com/c/KO7wn5fQ/13-us-trier

--- a/androidApp/src/main/res/layout/fragment_product.xml
+++ b/androidApp/src/main/res/layout/fragment_product.xml
@@ -38,7 +38,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/product_page_title"
-        app:backgroundTint="@color/dark_green" />
+        app:backgroundTint="@color/dark_green"
+        android:autofillHints="food" />
 
     <!-- header row of the table -->
     <View
