ADD: Loading Screen
I added a splash screen when starting the app. The launch looks more comfortable with animation

--- a/androidApp/src/main/res/values/styles.xml
+++ b/androidApp/src/main/res/values/styles.xml
@@ -111,4 +111,9 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <!-- Splash Sceen -->
+    <style name="Theme.Transparent" parent="Theme.AppCompat.Light.NoActionBar">
+            <item name="android:windowFullscreen">true</item>
+    </style>
+
 </resources>
